# slamkit

./: .gitignore  CLAUDE.md  pyproject.toml  pytest.ini
cli/: extract_sft_features.py  prepare_sft_tokens.py  train_sft.py
config/: extract_sft_features.yaml  prepare_sft_tokens.yaml  train_sft.yaml
config/data/: sft_data.yaml
config/model/: sft_qwen.yaml  text_then_speech.yaml
config/tokeniser/: unit_auv.yaml  unit_cosyvoice.yaml
config/tokeniser/feature_extractor/: auv.yaml  cosyvoice.yaml
config/training_args/: sft_training_args.yaml
example_arc/: README.md  eval_arc.py  eval_arc_base.py  prepare_arc_data.py  prepare_arc_tokens.py  train_arc.sh
example_data/: sft_features.jsonl  sft_test.jsonl  sft_tokens.jsonl
example_slamomni/: README.md  convert_to_sft.py  inference.py  inspect_data.py  inspect_sample.py  run_conversion.sh  run_evaluation.sh  run_training.sh  test_inference.py
example_slamomni/pretrain_qwen3-0.6B_checkpoint/: mmlu.md
scripts/: README.md  eval_mmlu_redux_zeroshot.py  plot_sequence_length.py  split_sft_data.py
slamkit/data/: __init__.py  hf_dataset.py
slamkit/feature_extractor/: __init__.py  auv_feature_extractor.py  cosyvoice_feature_extractor.py
slamkit/model/: unit_lm.py
slamkit/tokeniser/: audio_tokeniser.py
slamkit/utils/: init_utils.py
tests/: test_auv_feature_extractor.py  test_cosyvoice_feature_extractor.py  test_cosyvoice_reconstruction.py  test_cosyvoice_tokeniser_integration.py  test_cosyvoice_unit.py  test_extract_sft_features.py  test_prepare_sft_tokens.py  test_train_sft.py
