[build-system]
source = ["slamkit"]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slamkit"
version = "0.1.0"
dependencies = [
    "torch",
    "torchaudio<2.9",
    "torchvision",
    "transformers>=4.48.1",
    "datasets",
    "omegaconf",
    "hydra-core>=1.3.0",
    "accelerate",
    "numpy",
    "trl",
    "scikit-learn",
    "soundfile>=0.13.1",
    "auv>=0.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
